--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -10,16 +10,39 @@ layout: default
       </div>
       <div class="author-name">{{site.author}}</div>
       <p class="about-description" align="justify">{{site.about-author}}</p>
+    <section class="contact">
+      <ul>
+        {% if site.social-github %}
+          <li class="github"><a href="http://github.com/{{site.social-github}}" target="_blank"><i class="fa fa-github"></i></a></li>
+        {% else %}
+          <li class="github"><a href="http://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+        {% endif %}
+        {% if site.social-email %}
+          <li class="email"><a href="mailto:{{site.social-email}}"><i class="fa fa-envelope-o"></i></a></li>
+        {% else %}
+          <li class="email"><a href="mailto:example.david@blog.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
+        {% endif %}
+        {% if site.social-linkedin %}
+          <li class="linkedin"><a href="https://in.linkedin.com/in/{{site.social-linkedin}}" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+        {% else %}
+          <li class="linkedin"><a href="https://in.linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+        {% endif %}
+        {% if site.social-twitter %}
+          <li><a href="https://twitter.com/{{ site.social-twitter }}" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+        {% else %}
+          <li><a href="https://twitter.com/artemsheludko_" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+        {% endif %}
+      </ul>
+    </section> <!-- End Section Contact -->
     </div>
     <section class="links">
       <h3 class="links-title">Links</h3>
       <ul>
-          <li>Inspire-HEP Profile [Publications]</br>
+          <li>Inspire-HEP Profile (Publications)</br>
             <a href="http://inspirehep.net/author/profile/J.B.G.Alvey.1" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i>inspirehep.net</a>
           </li></br>
-          <li>Career [CV]</br>
+          <li>Career (CV) </br>
             <a href="{{site.baseurl}}/assets/pdf/cv.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>PDF</a>
-            <a href="http://github.com/{{site.social-github}}/CV" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
           </li></br>
       </ul>
     </section>
@@ -27,44 +50,20 @@ layout: default
     <section class="links">
       <h3 class="links-title">Projects</h3>
       <ul>
-          <li>DarkBBN</br>
+          <li>DarkBBN <a href="http://github.com/{{site.social-github}}/DarkBBN" target="_blank"><i style="color: #ffffff;" class="fa fa-github" aria-hidden="true"></i></a></br>
             <a href="https://arxiv.org/pdf/1910.10730.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>1910.10730</a>
             <a href="https://arxiv.org/pdf/1910.01649.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>1910.01649</a>
-            <a href="http://github.com/{{site.social-github}}/DarkBBN" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
           </li></br>
-          <li>Inelastic Cosmic Rays</br>
+          <li>Inelastic Cosmic Rays <a href="http://github.com/{{site.social-github}}/BoostedDM" target="_blank"><i style="color: #ffffff;" class="fa fa-github" aria-hidden="true"></i></a></br>
+            <a href="https://arxiv.org/pdf/1902.01450.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>1902.01450</a>
+          </li></br>
+          <li>Neutrino Astrophysics <a href="http://github.com/{{site.social-github}}/IceCubeNeutrinos" target="_blank"><i style="color: #ffffff;" class="fa fa-github" aria-hidden="true"></i></a></br>
             <a href="https://arxiv.org/pdf/1905.05776.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>1905.05776</a>
-            <a href="http://github.com/{{site.social-github}}/BoostedDM" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
           </li></br>
       </ul>
     </section>
   </header> <!-- End Header -->
   <footer>
-    <section class="contact">
-      <h3 class="contact-title">Contact me</h3>
-      <ul>
-        {% if site.social-twitter %}
-          <li><a href="https://twitter.com/{{ site.social-twitter }}" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-        {% else %}
-          <li><a href="https://twitter.com/artemsheludko_" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-        {% endif %}
-        {% if site.social-github %}
-          <li class="github"><a href="http://github.com/{{site.social-github}}" target="_blank"><i class="fa fa-github"></i></a></li>
-        {% else %}
-          <li class="github"><a href="http://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-        {% endif %}
-        {% if site.social-linkedin %}
-          <li class="linkedin"><a href="https://in.linkedin.com/in/{{site.social-linkedin}}" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-        {% else %}
-          <li class="linkedin"><a href="https://in.linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-        {% endif %}
-        {% if site.social-email %}
-          <li class="email"><a href="mailto:{{site.social-email}}"><i class="fa fa-envelope-o"></i></a></li>
-        {% else %}
-          <li class="email"><a href="mailto:example.david@blog.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
-        {% endif %}
-      </ul>
-    </section> <!-- End Section Contact -->
     <div class="copyright">
       <p>{{site.time | date: '%Y'}} &copy; {{site.author}}</p>
     </div>
