--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -53,12 +53,17 @@ layout: default
           <li>DarkBBN <a href="http://github.com/{{site.social-github}}/DarkBBN" target="_blank"><i style="color: #ffffff;" class="fa fa-github" aria-hidden="true"></i></a></br>
             <a href="https://arxiv.org/pdf/1910.10730.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>1910.10730</a>
             <a href="https://arxiv.org/pdf/1910.01649.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>1910.01649</a>
+            <a href="{{site.baseurl}}/assets/pdf/DMUK.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>DMUK Presentation</a>
           </li></br>
           <li>Inelastic Cosmic Rays <a href="http://github.com/{{site.social-github}}/BoostedDM" target="_blank"><i style="color: #ffffff;" class="fa fa-github" aria-hidden="true"></i></a></br>
             <a href="https://arxiv.org/pdf/1902.01450.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>1902.01450</a>
+            <a href="{{site.baseurl}}/assets/pdf/beam-dump.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>BUSSTEPP Presentation</a>
           </li></br>
           <li>Neutrino Astrophysics <a href="http://github.com/{{site.social-github}}/IceCubeNeutrinos" target="_blank"><i style="color: #ffffff;" class="fa fa-github" aria-hidden="true"></i></a></br>
             <a href="https://arxiv.org/pdf/1905.05776.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>1905.05776</a>
+          </li></br>
+          <li>Free Speed in Python <a href="http://github.com/{{site.social-github}}/PythonTools" target="_blank"><i style="color: #ffffff;" class="fa fa-github" aria-hidden="true"></i></a></br>
+            <a href="{{site.baseurl}}/assets/pdf/free-speed.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>Presentation</a>
           </li></br>
       </ul>
     </section>
