Resized cover image

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <aside class="sidebar">
-  <header style="overflow-y: scroll; scrollbar-width: none;">
+  <header style="overflow-y: scroll;">
     <div class="about">
       <div class="cover-author-image">
         <a href="{{site.baseurl}}/"><img src="{{site.baseurl}}/assets/img/{% if site.author-img %}{{site.author-img}}{% endif %}" alt="{{site.author}}"></a>
