--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -42,7 +42,7 @@ layout: default
             <a href="http://inspirehep.net/author/profile/J.B.G.Alvey.1" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i>inspirehep.net</a>
           </li></br>
           <li>Career (CV) </br>
-            <a href="{{site.baseurl}}/assets/pdf/cv.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>PDF</a>
+            <a href="{{site.baseurl}}/assets/pdf/james-alvey-cv.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>PDF</a>
           </li></br>
       </ul>
     </section>
